@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.855 2009-04-01 13:17:09 ub Exp $
+# $Id: CHANGES,v 1.856 2009-04-01 13:33:46 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2009/04/01) Fixed bug# 3737 - Non-ascii characters in filenames of outbound
+   email attachments are not quoted.
  - (2009/04/01) Implement enhancement/bug# 3527 - the input fields at the
    restrictions of the stats module now allow the use of wildcards at the
    beginning and end of a word (e.g. 'huber*'). This is now the same behavior
